--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
     {% if page.image %}
       <meta content="{{ site.url }}/assets/img/{{ page.image }}" property="og:image">
     {% else %}
-      <meta content="{{ '/assets/img/fractal1.jpg' | prepend: site.url }}" property="og:image">
+      <meta content="{{ '/assets/img/Fractal1.jpg' | prepend: site.url }}" property="og:image">
     {% endif %}
 
     <!-- Twitter Cards -->
@@ -55,7 +55,7 @@
     {% if page.image %}
       <meta name="twitter:image:src" content="{{ site.url }}/assets/img/{{ page.image }}">
     {% else %}
-      <meta name="twitter:image:src" content="{{ '/assets/img/fractal1.jpg' | prepend: site.url }}">
+      <meta name="twitter:image:src" content="{{ '/assets/img/Fractal1.jpg' | prepend: site.url }}">
     {% endif %}
 
 
