--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -177,7 +177,7 @@ HEADER STYLING
 
 .header {
 	background-color: $background-color;
-	background-image: url('../img/fractal1.jpg');
+	background-image: url('../img/Fractal1.jpg');
 	background-size: cover;
 	background-position: center center;
 	color: white;
