--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,9 @@
                  {% endfor %}
                  <li> <a href="https://Danny-Turner.github.io/csci340blog/" target="_blank">Home</a></li>
                  <li><a href="https://Danny-Turner.github.io/csci340blog/about">About</a></li>
+                 <li><a href="http://mark.goadrich.com/courses/csci340f19/">CSCI 340</a></li>
+                  <li><a href="https://Danny-Turner.github.io/csci340blog/astronomy">Astronomy</a></li>
+
              </ul>
          </nav>
      </div>
